<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.example.asus.oralhealth.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:drawableLeft="@drawable/homesmall"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:padding="3dp"
            android:text="@string/home"
            android:textSize="@dimen/fontSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/label"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/back"
                android:textSize="@dimen/fontSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/analyze"
            android:padding="@dimen/margin"
            android:text="@string/analyze"
            android:textSize="@dimen/fontSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/excel2"
            android:padding="@dimen/margin"
            android:text="@string/exportExcel"
            android:textSize="@dimen/fontSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/pdf"
            android:padding="@dimen/margin"
            android:text="@string/exportPDF"
            android:textSize="@dimen/fontSize"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
