<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.example.asus.oralhealth.ExcelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:drawableLeft="@drawable/homesmall"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:padding="3dp"
            android:text="@string/home"
            android:textSize="@dimen/fontSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/label"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/back"
                android:textSize="@dimen/fontSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/done"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/fontSize"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space"
        android:text="Export To Excel"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_margin"
        android:background="@color/blacklight"
        android:orientation="horizontal"
        android:padding="@dimen/space">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:text="@string/datetxt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fontSize20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sortTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:text="@string/sorttxt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fontSize20"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/showdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fontSize20"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnChangeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space"
                    android:drawableLeft="@drawable/calendar"
                    android:gravity="center"
                    android:textSize="@dimen/fontSize20"
                    android:textStyle="bold" />

            </LinearLayout>

            <Spinner
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSize20"></Spinner>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/exportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_margin"
        android:text="@string/export"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize" />
</LinearLayout>
